# PersonalFinance-BudgetAggregator

./: .gitignore  LICENSE  README.md  analytics.py  budget_engine.py  main.py  pyproject.toml
mapping/: category_map.json
parsers/: __init__.py  capital_one.py  nfcu.py
